Makes the files but can't get them back.